--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,8 +1,6 @@
-<div class="col-11">
-  {{> alert}}
-</div>
+{{> alert}}
 
-<div class="row">
+<div class="row products-page">
 {{#each products}}
   <div class="card">
     <a href="/product/{{this.id}}" class="a-custom" style="text-decoration:none;">
