--- a/views/admin/categories.hbs
+++ b/views/admin/categories.hbs
@@ -1,44 +1,46 @@
-{{>alert}}
-<h2 id="title">後台</h2>
-<a href="/admin/products" style="text-decoration: none;" class="subtitle">Product</a> |
-<a href="/admin/orders" style="text-decoration: none;" class="subtitle">Order</a> |
-<a href="/admin/categories" style="text-decoration: none;" class="subtitle">Category</a>
-<br>
+<div class="container">
+  {{>alert}}
+  <h2 id="title">後台</h2>
+  <a href="/admin/products" style="text-decoration: none;" class="subtitle">Product</a> |
+  <a href="/admin/orders" style="text-decoration: none;" class="subtitle">Order</a> |
+  <a href="/admin/categories" style="text-decoration: none;" class="subtitle">Category</a>
+  <br>
 
-{{#if edit}}
-<form action="/admin/categories/{{category.id}}?_method=PUT" method="POST">
-  <input type="text" name="name" value="{{category.name}}" placeholder="Category name" class="form-control add-category-btn"> 
-  <button type="submit" class="btn btn-secondary category-btn">Update</button>
-  <a type="button" href="javascript:history.back()" class="btn btn-secondary category-btn">cancel</a>
-</form>
-{{else}}
-<form action="/admin/categories/new" method="POST">
-  <input type="text" name="name" placeholder="Category name" class="form-control add-category-btn"> 
-  <button type="submit" class="btn btn-secondary category-btn">Add new category</button>
-</form>
-{{/if}}
+  {{#if edit}}
+  <form action="/admin/categories/{{category.id}}?_method=PUT" method="POST">
+    <input type="text" name="name" value="{{category.name}}" placeholder="Category name" class="form-control add-category-btn"> 
+    <button type="submit" class="btn btn-secondary category-btn">Update</button>
+    <a type="button" href="javascript:history.back()" class="btn btn-secondary category-btn">cancel</a>
+  </form>
+  {{else}}
+  <form action="/admin/categories/new" method="POST">
+    <input type="text" name="name" placeholder="Category name" class="form-control add-category-btn"> 
+    <button type="submit" class="btn btn-secondary category-btn">Add new category</button>
+  </form>
+  {{/if}}
 
-<table class="table table-bordered custom-category-table">
-  <thead class="thead thead-custom">
-    <tr class="text-center">
-      <th scope="col">Category Name</th>
-      <th scope="col">Detail</th>
-      <th scope="col"></th>
-    </tr>
-  </thead>
-  <tbody>
-    {{#each categories}}
-    <tr class="text-center">
-      <td>{{this.name}}</td>
-      <td>
-        <a href="/admin/categories/{{this.id}}" class="edit-btn">Edit</a>
-      </td>
-      <td>
-        <form action="/admin/categories/{{this.id}}?_method=DELETE" method="POST">
-          <button type="submit" class="btn trash"><i class="fas fa-trash-alt"></i></button>
-        </form>
-      </td>
-    </tr>
-    {{/each}}
-  </tbody>
-</table>
+  <table class="table table-bordered custom-category-table">
+    <thead class="thead thead-custom">
+      <tr class="text-center">
+        <th scope="col">Category Name</th>
+        <th scope="col">Detail</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      {{#each categories}}
+      <tr class="text-center">
+        <td>{{this.name}}</td>
+        <td>
+          <a href="/admin/categories/{{this.id}}" class="edit-btn">Edit</a>
+        </td>
+        <td>
+          <form action="/admin/categories/{{this.id}}?_method=DELETE" method="POST">
+            <button type="submit" class="btn trash"><i class="fas fa-trash-alt"></i></button>
+          </form>
+        </td>
+      </tr>
+      {{/each}}
+    </tbody>
+  </table>
+</div>
