--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -1,24 +1,26 @@
-<div class="log-in">
-  <h2><i class="fas fa-sign-in-alt title"></i> Log In</h2>
-  <form action="/user/login" method="POST">
-    <div class="form-group">
-      <label for="email">Email address</label>
-      <input type="email" class="form-control" id="email" name="email" value="admin@example.com" placeholder="Enter email">
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" name="password" value="a123456" placeholder="Password">
-    </div>
-    <div class="form-group">
-      No Account?
-      <a href="/user/register">Register here</a>
-    </div>
-    {{>alert}}
-    <center>
-      <button type="submit" class="btn btn-secondary custom-btn">Submit</button>
-    </center>
-  </form>
-</div>
+<div class="container">
+  <div class="log-in">
+    <h2><i class="fas fa-sign-in-alt title"></i> Log In</h2>
+    <form action="/user/login" method="POST">
+      <div class="form-group">
+        <label for="email">Email address</label>
+        <input type="email" class="form-control" id="email" name="email" value="admin@example.com" placeholder="Enter email">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" name="password" value="a123456" placeholder="Password">
+      </div>
+      <div class="form-group">
+        No Account?
+        <a href="/user/register">Register here</a>
+      </div>
+      {{>alert}}
+      <center>
+        <button type="submit" class="btn btn-secondary custom-btn">Submit</button>
+      </center>
+    </form>
+  </div>
 
 <!-- cart modal at right side -->
 {{> rightCart}}
+</div>
