--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -1,32 +1,34 @@
-<div class="register">
-  <h2><i class="fas fa-user title"></i> Register</h2>
-  <form action="/user/register" method="POST" class="form-logIn">
-    <div class="form-group">
-      <label for="account">Account</label>
-      <input type="string" class="form-control" id="account" name="account" value="{{account}}" placeholder="Enter account">
-    </div>
-    <div class="form-group">
-      <label for="email">Email</label>
-      <input type="email" class="form-control" id="email" name="email" value="{{email}}" placeholder="Enter email">
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" name="password" value="{{password}}" placeholder="Password">
-    </div>
-    <div class="form-group">
-      <label for="confirmPassword">Confirm Password</label>
-      <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" value="{{confirmPassword}}" placeholder="Confirm password">
-    </div>
-    <div class="form-group">
-      Already had an account?
-      <a href="/user/logIn">Log in</a>
-    </div>
-    {{>alert}}
-    <center>
-      <button type="submit" class="btn btn-secondary custom-btn">Submit</button>
-    </center>
-  </form>
-</div>
+<div class="container">
+  <div class="register">
+    <h2><i class="fas fa-user title"></i> Register</h2>
+    <form action="/user/register" method="POST" class="form-logIn">
+      <div class="form-group">
+        <label for="account">Account</label>
+        <input type="string" class="form-control" id="account" name="account" value="{{account}}" placeholder="Enter account">
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email" name="email" value="{{email}}" placeholder="Enter email">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" name="password" value="{{password}}" placeholder="Password">
+      </div>
+      <div class="form-group">
+        <label for="confirmPassword">Confirm Password</label>
+        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" value="{{confirmPassword}}" placeholder="Confirm password">
+      </div>
+      <div class="form-group">
+        Already had an account?
+        <a href="/user/logIn">Log in</a>
+      </div>
+      {{>alert}}
+      <center>
+        <button type="submit" class="btn btn-secondary custom-btn">Submit</button>
+      </center>
+    </form>
+  </div>
 
-<!-- cart modal at right side -->
-{{> rightCart}}
+  <!-- cart modal at right side -->
+  {{> rightCart}}
+</div>
