complete nodemailer function

--- a/views/favorite.hbs
+++ b/views/favorite.hbs
@@ -1,8 +1,8 @@
 {{> alert}}
 
-<div class="row">
+<div class="row products-page">
 {{#each FavoritedProducts}}
-  <div class="card products-page">
+  <div class="card">
     <a href="/product/{{this.id}}" class="a-custom" style="text-decoration:none;">
       <img class="card-img-top" src="{{this.image}}" alt="Card image cap">
       <div class="card-body favorite-card">
