--- a/views/order.hbs
+++ b/views/order.hbs
@@ -59,6 +59,10 @@
             <th scope="row">Name</th>
             <td>{{order.name}}</td>
           </tr>
+           <tr>
+            <th scope="row">Email</th>
+            <td>{{order.email}}</td>
+          </tr>
           <tr>
             <th scope="row">Phone</th>
             <td>{{order.phone}}</td>
