--- a/views/admin/order.hbs
+++ b/views/admin/order.hbs
@@ -85,6 +85,10 @@
               <td>{{order.name}}</td>
             </tr>
             <tr>
+              <th scope="row">Email</th>
+              <td>{{order.email}}</td>
+            </tr>
+            <tr>
               <th scope="row">Phone</th>
               <td>{{order.phone}}</td>
             </tr>
