--- a/views/order.hbs
+++ b/views/order.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="list-information">
-    <a href="/orders" type="button" class="btn btn-outline-secondary orders-btn"><i class="fas fa-arrow-left mr-4"></i>View all orders</a>
+    <a href="/orders" type="button" class="btn btn-outline-secondary custom-btn"><i class="fas fa-arrow-left mr-4"></i>View all orders</a>
 
     <ul class="list-group">
       <li class="list-group-item list-group-item-secondary">
