--- a/views/admin/categories.hbs
+++ b/views/admin/categories.hbs
@@ -8,13 +8,13 @@
 
   {{#if edit}}
   <form action="/admin/categories/{{category.id}}?_method=PUT" method="POST">
-    <input type="text" name="name" value="{{category.name}}" placeholder="Category name" class="form-control add-category-btn"> 
+    <input type="text" name="name" value="{{category.name}}" placeholder="Category name" class="form-control add-category-input"> 
     <button type="submit" class="btn btn-secondary category-btn">Update</button>
     <a type="button" href="javascript:history.back()" class="btn btn-secondary category-btn">cancel</a>
   </form>
   {{else}}
   <form action="/admin/categories/new" method="POST">
-    <input type="text" name="name" placeholder="Category name" class="form-control add-category-btn"> 
+    <input type="text" name="name" placeholder="Category name" class="form-control add-category-input"> 
     <button type="submit" class="btn btn-secondary category-btn">Add new category</button>
   </form>
   {{/if}}
