--- a/views/partials/rightCart.hbs
+++ b/views/partials/rightCart.hbs
@@ -21,23 +21,22 @@
             <h6>{{this.name}}</h6>
             <p style="display: inline;">$</p>
             <p style="display: inline;">{{this.price}}</p>
-            <div class="right-add-min-button">
-              
-                
+            {{#if ../order}}
+            x {{this.quantity}}
+            {{else}}
+            <div class="right-add-min-button">  
               <input type="hidden" name="productId" value="{{this.id}}">
-              <button onclick="min(this)" id="right-min" class="cart-btn" value="minus"><i class="fas fa-minus icon"></i></button>
+              <button onclick="rightCart(this)" id="right-min" class="cart-btn" value="minus"><i class="fas fa-minus icon"></i></button>
               <input id="right-num" name="num" value="{{this.quantity}}" readonly="true" class="cart">
-              <button onclick="min(this)" id="right-min" class="cart-btn" value="plus"><i class="fas fa-plus icon"></i></button>
-              {{!-- <form action="/cartItem/{{this.cartItemId}}/add" method="POST" class="cart">
-                <input type="submit" id="add" type="button" value="plus">
-              </form> --}}
+              <button onclick="rightCart(this)" id="right-min" class="cart-btn" value="plus"><i class="fas fa-plus icon"></i></button>
             </div>
             <div class="trash">
               <form action="/cartItem?_method=DELETE" method="POST">
                 <input type="hidden" name="cartItemId" value="{{this.cartItemId}}">
                 <button type="submit" class="btn trash-right"><i class="fas fa-trash-alt fa-lg"></i></button>
               </form>
-            </div>  
+            </div>
+            {{/if}}  
           </div>
         </div>
         {{/each}}
@@ -47,7 +46,7 @@
         <a type="button" class="btn btn-secondary" href="/product" style="text-decoration: none;">Keep Shopping</a>
         {{else}}
         <div class="div-subtotal">
-          <h6 class="total">Subtotal: </h6>
+          <h6 class="total">Total: </h6>
           <p style="display: inline;">$</p>
           <p class="total" id="totalPrice" style="display: inline;">{{totalPrice}}</p>
         </div>
@@ -60,7 +59,4 @@
   </div>
 </div>
 
-
-<script src="/index.js"></script>
 <script src="/ajax.js"></script>
-	
