put req.session.cartId into all controllers that has the function of rigth cart

--- a/views/partials/rightCart.hbs
+++ b/views/partials/rightCart.hbs
@@ -41,6 +41,7 @@
         </div>
         {{/each}}
       </div>
+      <input type="hidden" id="cartId" value="{{cartId}}">
       <div class="modal-footer">
         {{#if noItems}}
         <a type="button" class="btn btn-secondary" href="/product" style="text-decoration: none;">Keep Shopping</a>
