--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -45,7 +45,7 @@
             </td>
           </tr>
           {{/each}}
-          <input type="hidden" id="cartId" value="{{cartId}}">
+          {{!-- <input type="hidden" id="cartId" value="{{cartId}}"> --}}
           <tr>
             <th scope="col"></th>
             <th scope="col"></th>
